# MealDiner

./: README.md
.github/workflows/: rust-build-test.yaml
client/: Cargo.toml
client/src/: main.rs  model.rs  restaurant_client.rs
files/: MealDiner.json
server/: .env  Cargo.toml  Dockerfile
server/src/: app_state.rs  handler.rs  internal_store.rs  main.rs
server/src/config/: handler.rs  model.rs
server/src/menu/: handler.rs  model.rs
server/src/order/: handler.rs  model.rs
server/src/table/: handler.rs
