[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.133"
reqwest = "0.12.9"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
rand = "0.9.0-beta.1"
dotenv = "0.15.0"