[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }